--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/micnews/http-to-https"
   },
-  "author": "David Björklund <david.bjorklund@gmail.com> (http://davidbjorklund.com/)",
+  "author": "David Björklund <david@mic.com> (http://mic.com/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/micnews/http-to-https/issues"
